crates/pg_syntax/tests/snapshots/postgres_regress/date@31.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT date '19990108';"
---
SelectStmt@0..23
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..23
    Ident@7..11 "date"
    Whitespace@11..12 " "
    TypeCast@12..23
      AConst@12..22
        Sconst@12..22 "'19990108'"
      Ascii59@22..23 ";"

