crates/pg_syntax/tests/snapshots/postgres_regress/date@32.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT date '990108';"
---
SelectStmt@0..21
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..21
    Ident@7..11 "date"
    Whitespace@11..12 " "
    TypeCast@12..21
      AConst@12..20
        Sconst@12..20 "'990108'"
      Ascii59@20..21 ";"

